2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.pcx: New file. Syntax definitions for the public
	  commands of the htmlparse package.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-01  Andreas Kupries  <andreask@activestate.com>

	* htmlparse.test: Updated to use the TestAccel utility commands to
	  handle accelerators.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* htmlparse.man: Bumped version to 1.1.2
	* htmlparse.tcl:
	* pkgIndex.tcl:

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.test: Hooked into the new common test support code.

2006-01-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.tree_testsuite: Made the helper command reordering the
	* htmlparse.tcl:            tree a bit less agressive. See [SF
	  Tcllib Patch 953854]. Advice by Ramon Ribo. Updated the
	  testsuite as well.

2006-01-10  Andreas Kupries <andreask@activestate.com>

	* htmlparse.test: Fixed [SF Tcllib Bug 1316049]. Uncluttering test
	  output.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-06  Andreas Kupries <andreask@activestate.com>

	* htmlparse.test: Reworked to use all available implementations of
	  struct::tree. Moved all tests using it into a separate file.
