@@ -1,11 +1,11 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin htmlparse n 1.1.2]
+[manpage_begin htmlparse n 1.1.3]
 [moddesc   {HTML Parser}]
 [titledesc {Procedures to parse HTML strings}]
 [require Tcl 8.2]
 [require struct::stack 1.3]
 [require cmdline 1.1]
-[require htmlparse [opt 1.1.2]]
+[require htmlparse [opt 1.1.3]]
 [description]
 [para]
 
